package ru.itmo.backend.controller;

import jakarta.validation.Valid;
import lombok.RequiredArgsConstructor;
import org.springframework.web.bind.annotation.*;
import ru.itmo.backend.dto.market.*;
import ru.itmo.backend.service.MarketService;

import java.util.List;

@RestController
@RequiredArgsConstructor
@RequestMapping("/market")
public class MarketController {
    private final MarketService marketService;

    @GetMapping("/sale-listings")
    public List<SaleListingPreviewDto> listSale() {
        return marketService.getActiveSaleListings();
    }

    @GetMapping("/skins")
    public List<SkinPreviewDto> skins(@RequestParam(required = false) String q,
                                      @RequestParam(required = false) String collection,
                                      @RequestParam(required = false) String rarity,
                                      @RequestParam(required = false) String condition) {
        return marketService.getSkins(q, collection, rarity, condition);
    }

    @PostMapping("/sale-listings")
    public SaleListingCreatedDto createSaleListing(@Valid @RequestBody CreateSaleListingRequestDto req) {
        return marketService.createSaleListing(req);
    }

    @PostMapping("/sale-listings/{id}/instant-sell")
    public void instantSell(@PathVariable Integer id, @RequestParam Integer sellerId) {
        marketService.instantSell(sellerId, id);
    }
}
